@@ -1,11 +1,13 @@
 Function: bnrinit
 Section: number_fields
-C-Name: bnrinit0
-Prototype: GGD0,L,
-Help: bnrinit(bnf,f,{flag=0}): given a bnf as output by
+C-Name: bnrinitmod
+Prototype: GGD0,L,DG
+Help: bnrinit(bnf,f,{flag=0},{cycmod}): given a bnf as output by
  bnfinit and a modulus f, initializes data
  linked to the ray class group structure corresponding to this module. flag
- is optional, and can be 0: default, 1: compute also the generators.
+ is optional, and can be 0: default, 1: compute also the generators. If
+ the positive integer cycmod is present, only compute the ray class group
+ modulo cycmod.
 Description:
  (gen,gen,?small):bnr       bnrinit0($1, $2, $3)
 Doc: $\var{bnf}$ is as
@@ -15,6 +17,16 @@ Doc: $\var{bnf}$ is as
  \var{bid} with generators for $f$ instead of the module itself, saving some
  time. (As in \tet{idealstar}, the finite part of the conductor may be given
  by a factorization into prime ideals, as produced by \tet{idealfactor}.)
+
+ If the positive integer \kbd{cycmod} is present, only compute the ray class
+ group modulo \kbd{cycmod}, which may save a lot of time when some maximal
+ ideals in $f$ have a huge residue field. In applications, we are given
+ a congruence subgroup $H$ and study the class field attached to
+ $\text{Cl}_f/H$. If that finite Abelian group has an exponent which divides
+ \kbd{cycmod}, then we have changed nothing theoretically, while trivializing
+ expensive discrete logs in residue fields (since computations can be
+ made modulo \kbd{cycmod}-th powers). This is useful in \kbd{bnrclassfield},
+ for instance when computing $p$-elementary extensions.
 
  The following member functions are available
  on the result: \kbd{.bnf} is the underlying \var{bnf},
