@@ -28,10 +28,24 @@ Doc: let \var{bnr} be the ray class group data output by
  ? bnr.clgp \\ ray class group is isomorphic to Z/4 x Z/2 x Z/2
  %2 = [16, [4, 2, 2]]
  ? P = idealprimedec(K, 3)[1]; \\ a prime ideal above 3
- ? bnrisprincipal(bnr,P)
- %4 = [[1, 0, 0]~, 1]
- ? bnrisprincipal(bnr,P, 0) \\ omit the principal part
- %4 = [1, 0, 0]~
+ ? bnrisprincipal(bnr,P) \\ bnr.gen is missing
+  ***   at top-level: bnrisprincipal(bnr,P)
+  ***                 ^---------------------
+  *** bnrisprincipal: missing bnr generators: please use bnrinit(,,1).)
+ ? bnrisprincipal(bnr,P, 0) \\ omit principal part, no need for bnr.gen
+ %5 = [3, 0, 0]~
+ ? bnr = bnrinit(bnr, bnr.mod, 1); \\ include generators
+ ? bnrisprincipal(bnr,P) \\ ... and now it works
+ %7 = [[1, 1, 1]~, 1/128625]
+ @eprog
+ Beware that, when \kbd{bnr} is generated using \kbd{bnrinit(, cycmod)}, the
+ results are given in $\text{Cl}_f$ modulo \kbd{cycmod}-th powers:
+ \bprog
+ ? bnr2 = bnrinit(K, bnr.mod,, 2);  \\ modulo squares
+ ? bnr2.clgp
+ %9 = [8, [2, 2, 2]]  \\ bnr.clgp tensored by Z/2Z
+ ? bnrisprincipal(bnr2,P, 0)
+ %10 = [1, 0, 0]~]
  @eprog
 
 Variant: Instead of hardcoded  numerical flags,  one should rather use
