@@ -2262,6 +2262,7 @@ long    ZC_nfval(GEN x, GEN P);
 long    ZC_nfvalrem(GEN x, GEN P, GEN *t);
 int     ZC_prdvd(GEN x, GEN P);
 GEN     ZM_ZX_mul(GEN A, GEN x);
+GEN     ZV_gcdmod(GEN x, GEN mod);
 GEN     algtobasis(GEN nf, GEN x);
 GEN     basistoalg(GEN nf, GEN x);
 GEN     ei_multable(GEN nf, long i);
@@ -2274,6 +2275,7 @@ GEN     ideallistarch(GEN nf, GEN list, GEN arch);
 GEN     ideallog(GEN nf,GEN x,GEN bid);
 GEN     ideallogmod(GEN nf,GEN x,GEN bid, GEN mod);
 GEN     ideallog_units(GEN bnf, GEN bid);
+GEN     ideallog_units0(GEN bnf, GEN bid, GEN MOD);
 GEN     idealprincipalunits(GEN nf, GEN pr, long e);
 GEN     idealstar0(GEN nf, GEN x,long flag);
 GEN     indices_to_vec01(GEN archp, long r);
@@ -2753,6 +2755,7 @@ GEN     signunits(GEN bignf);
 
 GEN     ABC_to_bnr(GEN A, GEN B, GEN C, GEN *H, int gen);
 GEN     Buchray(GEN bnf, GEN module, long flag);
+GEN     Buchraymod(GEN bnf, GEN f, long flag, GEN MOD);
 GEN     bnrautmatrix(GEN bnr, GEN aut);
 GEN     bnr_check_subgroup(GEN bnr, GEN H, GEN *pdeg);
 GEN     bnrchar(GEN bnr, GEN g, GEN v);
@@ -2771,6 +2774,7 @@ GEN     bnrdisclist0(GEN bnf,GEN borne, GEN arch);
 GEN     bnrgaloismatrix(GEN bnr, GEN aut);
 GEN     bnrgaloisapply(GEN bnr, GEN mat, GEN x);
 GEN     bnrinit0(GEN bignf,GEN ideal,long flag);
+GEN     bnrinitmod(GEN bnf, GEN ideal, long flag, GEN MOD);
 long    bnrisconductor0(GEN A, GEN B, GEN C);
 long    bnrisconductor(GEN bnr, GEN H);
 long    bnrisgalois(GEN bnr, GEN M, GEN H);
