@@ -78,6 +78,7 @@ x
 hard DLs (#2228)
 [1, 2, 1624384359015881850161120870813]
 [1, 4, 3506795120905895253346115478005586436761515635553951033]
+[x^2 - 1594287814679644276013]
 26
 x^128 - 16*x^127 - 684*x^126 + 13212*x^125 + 200668*x^124 - 5049860*x^123 - 
 30146336*x^122 + 1186356796*x^121 + 1435862576*x^120 - 191745384780*x^119 + 
@@ -250,4 +251,4 @@ bad inputs
   ***   at top-level: bnrclassfield(bnfinit(x))
   ***                 ^-------------------------
   *** bnrclassfield: incorrect priority in bnrclassfield: variable x = x
-Total time spent: 3700
+Total time spent: 4819
